Fixed scrollbar of DropdownBox. Scrollbars no longer go across the DropdownBox footer.

--- a/src/style/ui-components.scss
+++ b/src/style/ui-components.scss
@@ -34,6 +34,8 @@
 	border: $defaultBorder;
 	background-color: white;
 	cursor: pointer;
+    box-sizing: border-box;
+    height: $defaultBoxHeight;
 	user-select: none;
 }
 	
@@ -43,14 +45,22 @@
 		box-shadow: $dropdownBoxShadow;
 	}
 	
-	.dropdown-box.is-opened .dropdown-list {
+	.dropdown-box.is-opened .dropdown-content {
 		display: block;
 		box-shadow: $dropdownBoxShadow;
 	}
 	.dropdown-header {
 		padding-left: 12px;
 		padding-right: 12px;
+        border-bottom: 1px solid transparent;
 	}
+    
+        .dropdown-box.is-opened .dropdown-header {
+            
+            border-bottom: 1px solid $defaultColor;
+            
+        }
+    
 		.dropdown-icon {
             
 			position: absolute;
@@ -104,7 +114,7 @@
 			user-select: none;
 		}
 
-	.dropdown-list {
+	.dropdown-content {
 		display: none;
 		position: absolute;
 		z-index: 1;
@@ -116,16 +126,22 @@
 		border-bottom-left-radius: $defaultBorderRadius;
 		border-bottom-right-radius: $defaultBorderRadius;
 		background-color: white;
-        max-height: 187px;
-        overflow: scroll;
-		
 	}
 	
-		.dropdown-list  > li {
+		.dropdown-list {   
+            max-height: 187px;
+            overflow: scroll;
+        }
+        
+        .dropdown-list > li {
             position: relative;
 			padding: $dropdownPadding;
-			border-top: 1px solid $defaultColor;
+			border-bottom: 1px solid $defaultColor;
 			color: #2a2a2a;
+		}
+        
+        .dropdown-list > li:last-child {
+			border-bottom: none;;
 		}
             
 			.is-opened .item-selected {
@@ -151,17 +167,18 @@
                 }
                 
 			
-		.dropdown-list .dropdown-list-footer {
+		.dropdown-content-footer {
 			position: relative;
 			padding: 20px 12px;
+            border-top: $defaultBorder;
 		}
 		
-			.dropdown-list .num-of-selected {
+			.dropdown-content-footer .num-of-selected {
 				color: $defaultFontColor;
 				font-size: $font-s;
 			}
 			
-			.dropdown-list .done {
+			.dropdown-content-footer .done {
 				position: absolute;
 				right: 16px;
 				top: 16px;
@@ -173,7 +190,7 @@
 				
 			}
 			
-			.dropdown-list .done:hover {
+			.dropdown-content-footer .done:hover {
 				
 				 box-shadow: 0 0 4px 0 #1d92ed;
 			}
